@@ -5,6 +5,7 @@
  */
 function feeds_news_feeds_importer_default() {
   $export = array();
+
   $feeds_importer = new stdClass;
   $feeds_importer->disabled = FALSE; /* Edit this to true to make a default feeds_importer disabled initially */
   $feeds_importer->api_version = 1;
@@ -53,7 +54,7 @@ function feeds_news_feeds_importer_default() {
           ),
           4 => array(
             'source' => 'description',
-            'target' => 'field_body',
+            'target' => 'field_feed_item_description',
             'unique' => FALSE,
           ),
         ),
@@ -66,9 +67,10 @@ function feeds_news_feeds_importer_default() {
     'import_period' => '1800',
     'expire_period' => 3600,
     'import_on_create' => 1,
+    'process_in_background' => FALSE,
   );
-
   $export['feed'] = $feeds_importer;
+
   $feeds_importer = new stdClass;
   $feeds_importer->disabled = FALSE; /* Edit this to true to make a default feeds_importer disabled initially */
   $feeds_importer->api_version = 1;
@@ -112,7 +114,7 @@ function feeds_news_feeds_importer_default() {
     'expire_period' => 3600,
     'import_on_create' => 1,
   );
-
   $export['opml'] = $feeds_importer;
+
   return $export;
 }
