@@ -1,16 +1,19 @@
 core = "7.x"
+dependencies[] = "features"
 dependencies[] = "feeds"
 dependencies[] = "views"
 description = "A news aggregator built with feeds, creates nodes from imported feed items. With OPML import."
 features[ctools][] = "feeds:feeds_importer_default:1"
 features[feeds_importer][] = "feed"
 features[feeds_importer][] = "opml"
-features[field][] = "node-feed_item-field_body"
+features[field][] = "node-feed_item-field_feed_item_description"
 features[node][] = "feed"
 features[node][] = "feed_item"
 features[views][] = "feeds_defaults_feed_items"
 features[views_api][] = "api:3.0-alpha1"
 files[] = "feeds_news.module"
+files[] = "feeds_news.test"
 name = "Feeds News"
 package = "Feeds"
+php = "5.2.0"
 project = "Feeds"
