@@ -6,38 +6,26 @@
  * Tests for feeds_news feature.
  */
 
-// Require FeedsWebTestCase class definition.
-require_once(dirname(__FILE__) .'/../tests/feeds.test.inc');
-
 /**
  * Test Feed configuration.
  */
 class FeedsExamplesFeedTestCase extends FeedsWebTestCase {
-
-  /**
-   * Set up test.
-   */
-  public function setUp() {
-    parent::setUp('feeds', 'feeds_ui', 'ctools', 'job_scheduler', 'features', 'feeds_news');
-
-    $this->drupalLogin(
-      $this->drupalCreateUser(
-        array(
-          'administer feeds', 'administer nodes',
-        )
-      )
-    );
-  }
-
   /**
    * Describe this test.
    */
   public function getInfo() {
     return array(
       'name' => t('Feature: Feed'),
-      'description' => t('Test "Feed" default configuration. <strong>Requires Features.</strong>'),
+      'description' => t('Test "Feed" default configuration.'),
       'group' => t('Feeds'),
     );
+  }
+
+  /**
+   * Enable feeds_news feature.
+   */
+  public function setUp() {
+    parent::setUp(array('feeds_news'));
   }
 
   /**
@@ -47,28 +35,28 @@ class FeedsExamplesFeedTestCase extends FeedsWebTestCase {
     $nid = $this->createFeedNode('feed', NULL, '', 'feed');
 
     // Assert results.
-    $count = db_result(db_query("SELECT COUNT(*) FROM {node} WHERE type = 'feed_item'"));
+    $count = db_query("SELECT COUNT(*) FROM {node} WHERE type = 'feed_item'")->fetchField();
     $this->assertEqual($count, 10, 'Found the correct number of feed item nodes in database.');
 
-    $count = db_result(db_query("SELECT COUNT(*) FROM {feeds_item} WHERE entity_type = 'node'"));
+    $count = db_query("SELECT COUNT(*) FROM {feeds_item} WHERE entity_type = 'node'")->fetchField();
     $this->assertEqual($count, 10, 'Found the correct number of records in feeds_item.');
 
-    $count = db_result(db_query("SELECT COUNT(*) FROM {node} WHERE title = 'Open Atrium Translation Workflow: Two Way Translation Updates'"));
+    $count = db_query("SELECT COUNT(*) FROM {node} WHERE title = 'Open Atrium Translation Workflow: Two Way Translation Updates'")->fetchField();
     $this->assertEqual($count, 1, 'Found title.');
-    $count = db_result(db_query("SELECT COUNT(*) FROM {node} WHERE title = 'Week in DC Tech: October 5th Edition'"));
+    $count = db_query("SELECT COUNT(*) FROM {node} WHERE title = 'Week in DC Tech: October 5th Edition'")->fetchField();
     $this->assertEqual($count, 1, 'Found title.');
-    $count = db_result(db_query("SELECT COUNT(*) FROM {node} WHERE title = 'Integrating the Siteminder Access System in an Open Atrium-based Intranet'"));
+    $count = db_query("SELECT COUNT(*) FROM {node} WHERE title = 'Integrating the Siteminder Access System in an Open Atrium-based Intranet'")->fetchField();
     $this->assertEqual($count, 1, 'Found title.');
-    $count = db_result(db_query("SELECT COUNT(*) FROM {node} WHERE title = 'Scaling the Open Atrium UI'"));
+    $count = db_query("SELECT COUNT(*) FROM {node} WHERE title = 'Scaling the Open Atrium UI'")->fetchField();
     $this->assertEqual($count, 1, 'Found title.');
 
-    $count = db_result(db_query("SELECT COUNT(*) FROM {feeds_item} WHERE entity_type = 'node' AND url = 'http://developmentseed.org/blog/2009/oct/06/open-atrium-translation-workflow-two-way-updating'"));
+    $count = db_query("SELECT COUNT(*) FROM {feeds_item} WHERE entity_type = 'node' AND url = 'http://developmentseed.org/blog/2009/oct/06/open-atrium-translation-workflow-two-way-updating'")->fetchField();
     $this->assertEqual($count, 1, 'Found feed_node_item record.');
-    $count = db_result(db_query("SELECT COUNT(*) FROM {feeds_item} WHERE entity_type = 'node' AND url = 'http://developmentseed.org/blog/2009/oct/05/week-dc-tech-october-5th-edition'"));
+    $count = db_query("SELECT COUNT(*) FROM {feeds_item} WHERE entity_type = 'node' AND url = 'http://developmentseed.org/blog/2009/oct/05/week-dc-tech-october-5th-edition'")->fetchField();
     $this->assertEqual($count, 1, 'Found feed_node_item record.');
-    $count = db_result(db_query("SELECT COUNT(*) FROM {feeds_item} WHERE entity_type = 'node' AND guid = '974 at http://developmentseed.org'"));
+    $count = db_query("SELECT COUNT(*) FROM {feeds_item} WHERE entity_type = 'node' AND guid = '974 at http://developmentseed.org'")->fetchField();
     $this->assertEqual($count, 1, 'Found feed_node_item record.');
-    $count = db_result(db_query("SELECT COUNT(*) FROM {feeds_item} WHERE entity_type = 'node' AND guid = '970 at http://developmentseed.org'"));
+    $count = db_query("SELECT COUNT(*) FROM {feeds_item} WHERE entity_type = 'node' AND guid = '970 at http://developmentseed.org'")->fetchField();
     $this->assertEqual($count, 1, 'Found feed_node_item record.');
 
     // Remove all items
@@ -82,17 +70,17 @@ class FeedsExamplesFeedTestCase extends FeedsWebTestCase {
     // Delete and assert all items gone.
     $this->drupalPost('node/'. $nid .'/delete-items', array(), 'Delete');
 
-    $count = db_result(db_query("SELECT COUNT(*) FROM {node} WHERE type = 'feed_item'"));
+    $count = db_query("SELECT COUNT(*) FROM {node} WHERE type = 'feed_item'")->fetchField();
     $this->assertEqual($count, 0, 'Found the correct number of feed item nodes in database.');
 
-    $count = db_result(db_query("SELECT COUNT(*) FROM {feeds_item} WHERE entity_type = 'node'"));
+    $count = db_query("SELECT COUNT(*) FROM {feeds_item} WHERE entity_type = 'node'")->fetchField();
     $this->assertEqual($count, 0, 'Found the correct number of records in feeds_item.');
 
     // Create a batch of nodes.
     $this->createFeedNodes('feed', 10, 'feed');
-    $count = db_result(db_query("SELECT COUNT(*) FROM {node} WHERE type = 'feed_item'"));
+    $count = db_query("SELECT COUNT(*) FROM {node} WHERE type = 'feed_item'")->fetchField();
     $this->assertEqual($count, 100, 'Imported 100 nodes.');
-    $count = db_result(db_query("SELECT COUNT(*) FROM {feeds_item} WHERE entity_type = 'node'"));
+    $count = db_query("SELECT COUNT(*) FROM {feeds_item} WHERE entity_type = 'node'")->fetchField();
     $this->assertEqual($count, 100, 'Found 100 records in feeds_item.');
   }
 }
@@ -101,22 +89,6 @@ class FeedsExamplesFeedTestCase extends FeedsWebTestCase {
  * Test OPML import configuration.
  */
 class FeedsExamplesOPMLTestCase extends FeedsWebTestCase {
-
-  /**
-   * Set up test.
-   */
-  public function setUp() {
-    parent::setUp('feeds', 'feeds_ui', 'ctools', 'job_scheduler', 'feeds_news');
-
-    $this->drupalLogin(
-      $this->drupalCreateUser(
-        array(
-          'administer feeds', 'administer nodes',
-        )
-      )
-    );
-  }
-
   /**
    * Describe this test.
    */
@@ -129,6 +101,13 @@ class FeedsExamplesOPMLTestCase extends FeedsWebTestCase {
   }
 
   /**
+   * Enable feeds_news feature.
+   */
+  public function setUp() {
+    parent::setUp(array('feeds_news'));
+  }
+
+  /**
    * Run tests.
    */
   public function test() {
@@ -137,7 +116,7 @@ class FeedsExamplesOPMLTestCase extends FeedsWebTestCase {
     $file = $this->generateOPML();
     $this->importFile('opml', $file);
     $this->assertText('Created 3 feed nodes.');
-    $count = db_result(db_query("SELECT COUNT(*) FROM {feeds_source}"));
+    $count = db_query("SELECT COUNT(*) FROM {feeds_source}")->fetchField();
     $this->assertEqual($count, 4, 'Found correct number of items.');
 
     // Import a feed and then delete all items from it.
