@@ -3,6 +3,8 @@
 Feeds 7.x 2.0 XXXXXXXXXXXXXXXXXXX
 ---------------------------------
 
+- Fix Feeds News tests, add a 'description' field to the  Feeds Item content
+  type.
 - #728534 alex_b: Remove FeedsFeedNodeProcessor. If you have used
   FeedsFeedNodeProcessor in the past, use FeedsNodeProcessor (Node Processor)
   instead now. It supports all of FeedsFeedNodeProcessor's functionality and
